fix: update page title to reflect personal branding

--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Creative Developer Portfolio</title>
+    <title>Mitchell's Portfolio</title>
     <meta name="description" content="Portfolio of a creative full-stack developer specializing in modern web technologies and innovative digital experiences.">
     <meta property="og:title" content="Creative Developer Portfolio">
     <meta property="og:description" content="Portfolio showcasing innovative web development projects and creative digital solutions.">
